minor alignment fixes

--- a/web/static/sass/_board.scss
+++ b/web/static/sass/_board.scss
@@ -1,3 +1,7 @@
+.bg-jep-blue {
+    background-color: $jeopardy-blue;
+}
+
 .question a {
     color: #fff;
     text-decoration: underline;
