--- a/web/static/sass/_icon-buttons.scss
+++ b/web/static/sass/_icon-buttons.scss
@@ -5,8 +5,8 @@
 }
 
 .icon {
-    width: 1em;
-    height: 1em;
+    width: 0.85rem;
+    height: 0.85rem;
     position: relative;
     top: .1em;
 }
